kibana/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: kibana
spec:
  backend:
    serviceName: kibana
    servicePort: 5601
